Update edit.jsp: dynamically added items, backend integration Add add.jsp Add delete.jsp Fix dashboard.jsp: only assign uid if not null Update dashboard.jsp: date pretty-print Update dashboard.jsp: support for newly introduced add/delete Survey.java: Add clearSurvey, deleteSurvey style.css: Set width, text alignment (required for dynamically added items)

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -36,6 +36,11 @@ h1#appName {
     vertical-align: text-bottom;
 }
 
+.formEdit > div > div > input {
+    width: 100%;
+    text-align: center !important;
+}
+
 /*
  * Sidebar
  */
